# SUNA_BOT

./: .gitignore  README.md  index.html  package.json
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: c8b7d7f6494a_init.py
backend/app/: .env  database.py  main.py
backend/app/core/: config.py
backend/app/crud/: track.py
backend/app/models/: track.py
backend/app/routers/: track.py
backend/app/schemas/: track.py
fontend/: babel.config.js  index.html  package-lock.json  package.json
fontend/src/: App.css  App.tsx  Home.tsx  NoInsides.tsx
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/assets/footerSvg/: glass.tsx  playlist.tsx
frontend/src/assets/svg/: play.tsx
frontend/src/pages/: NoInsides.tsx  Noinsides.css
frontend/src/pages/Chat/: index.tsx
src/: App.css  App.tsx
src/assets/footerSvg/: heart.tsx  home.tsx
src/assets/svg/: heart.tsx  pause.tsx
src/components/Button/: index.css  index.tsx
src/components/ButtonMain/: index.tsx
src/components/Input/: index.css  index.tsx
src/components/MusicList/: index.tsx
src/components/PlayerBottom/: index.tsx
src/components/Sidebar/: SidebarMenu.tsx
src/components/Slider/: index.tsx
src/components/TrackBlock/: index.tsx
src/pages/: NoInsides.tsx
src/pages/Chat/: index.css  index.tsx
src/pages/Form/: FormFirst.tsx  FormSecond.tsx
src/pages/Home/: Home.css  Home.tsx
src/pages/HomePage/: HomePage.tsx
src/pages/MainScreen/: index.tsx
src/pages/RightUI/: Right.tsx
src/types/: Track.tsx  telegram.d.ts
(+20 files in other folders)
